2022-04-22 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/Makefile.in,
	  support/regression/ports/host/spec.mk.in:
	  Deduplicate EMU rule: handle test-host similar to other targets, patch by Felix Salfelder (felixs).

2022-04-22 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/MakeList:
	  Exclude a test for some pdk15-stack-auto target (due to lack of memory), patch by Felix Salfelder (felixs).

2022-04-22 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/MakeList:
	  Exclude some tests for some mcs51 targets (due to lack of memory), patch by Felix Salfelder (felixs).

2022-04-22 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/tests/bug-1981238.c,
	  support/regression/tests/bug-3368.c:
	  Disable some warnings about stuff that is meant to be tested.

2022-04-22 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/MakeList:
	  Exclude some known-failing among the new tests, patch by Felix Salfelder (felixs).
	* support/regression/Makefile.in,
	  support/regression/ports/host/spec.mk.in:
	  Work around a linker error reporting issue, patch by Felix Salfelder (felixs).

2022-04-22 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* device/lib/z180/setjmp.s,
	  device/lib/z80/setjmp.s,
	  device/lib/z80n/setjmp.s:
	  Fix an issue triggered by tail-call optimization on calls to longjmp.

2022-04-22 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/gte/README,
	  support/regression/qct/README,
	  support/regression/tcc/README:
	  Document Licenses of imported tests, patch by Felix Salfelder (felixs).

2022-04-21 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/MakeList,
	  support/regression/cases/Makefile.in,
	  support/regression/tcc,
	  support/regression/qct: