@@ -2,6 +2,7 @@ set error non-classified off
 set error unknown_code off
 set error memory off
 set error stack off
+set opt selfjump_stop 1
 break xram r 0x7654
 port0_on=0
 port1_on=0
